# svm_ml_inC

./: CMakeLists.txt  Makefile  README.md  setup.bat  setup.sh
src/: ali_hamo.c  fadel_abderrahmen.c  main.c
